--- a/list.html
+++ b/list.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Theming - Semantic</title>
-    <link rel="stylesheet" type="text/css" href="../Semantic-UI-master/dist/semantic.css">
-    <script src="../Semantic-UI-master/examples/assets/library/jquery.min.js"></script>
-    <script src="../Semantic-UI-master/dist/semantic.js"></script>
+    <link rel="stylesheet" type="text/css" href="./Semantic-UI-master/dist/semantic.css">
+    <script src="./Semantic-UI-master/examples/assets/library/jquery.min.js"></script>
+    <script src="./Semantic-UI-master/dist/semantic.js"></script>
     <!--- Example CSS -->
     <style>
     body {
@@ -472,9 +472,9 @@
             </div>
         </div>
     </div>
-    <script src="../js/lib/underscore.min.js"></script>
-    <script src="../js/lib/vue.js"></script>
-    <script src="../js/controller/list.js"></script>
+    <script src="./js/lib/underscore.min.js"></script>
+    <script src="./js/lib/vue.js"></script>
+    <script src="./js/controller/list.js"></script>
 </body>
 
 </html>
