--- a/pages/index.html
+++ b/pages/index.html
@@ -204,7 +204,7 @@ body {
                                         </div>
                                     </td>
                                     <td class="skuselectiontd">
-                                        <skuselection :skulistprop="skulist" skumixid="" @skuselected="skuSelectionHandler"></skuselection>
+                                        <skuselection :skulistprop="skulistavailable" skumixid="" @skuselected="skuSelectionHandler"></skuselection>
                                     </td>
                                     <td>
                                         <div class="ui fluid transparent input">
